Update settings activity, split up URL option. Closes #10